--- a/dataset/KnowEdit-ms/llm_gen_dataset.ipynb
+++ b/dataset/KnowEdit-ms/llm_gen_dataset.ipynb
@@ -132,6 +132,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import transformers\n",
+    "import torch\n",
+    "import os\n",
+    "os.environ['CUDA_VISIBLE_DEVICES']='0'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model_id = \"meta-llama/Meta-Llama-3-8B\"\n",
+    "model_id = \"/share/huggingface/Meta-Llama-3-8B-Instruct\"\n",
+    "\n",
+    "pipeline = transformers.pipeline(\"text-generation\", \n",
+    "                                 model=model_id, \n",
+    "                                 model_kwargs={\"torch_dtype\": torch.bfloat16}, \n",
+    "                                 device_map=\"auto\")\n",
+    "pipeline(\"The name of the country of citizenship of Leonardo DiCaprio is\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline('Which family does Epaspidoceras belong to?')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -139,14 +176,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The model 'GPTJForCausalLM' is not supported for text2text-generation. Supported models are ['BartForConditionalGeneration', 'BigBirdPegasusForConditionalGeneration', 'BlenderbotForConditionalGeneration', 'BlenderbotSmallForConditionalGeneration', 'EncoderDecoderModel', 'FSMTForConditionalGeneration', 'GPTSanJapaneseForConditionalGeneration', 'LEDForConditionalGeneration', 'LongT5ForConditionalGeneration', 'M2M100ForConditionalGeneration', 'MarianMTModel', 'MBartForConditionalGeneration', 'MT5ForConditionalGeneration', 'MvpForConditionalGeneration', 'NllbMoeForConditionalGeneration', 'PegasusForConditionalGeneration', 'PegasusXForConditionalGeneration', 'PLBartForConditionalGeneration', 'ProphetNetForConditionalGeneration', 'SeamlessM4TForTextToText', 'SeamlessM4Tv2ForTextToText', 'SwitchTransformersForConditionalGeneration', 'T5ForConditionalGeneration', 'UMT5ForConditionalGeneration', 'XLMProphetNetForConditionalGeneration'].\n",
       "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[{'generated_text': 'The name of the country of citizenship of Leonardo DiCaprio is not known.\\n\\nLeonardo DiCaprio is a famous actor.\\n\\nLeonardo DiCaprio is a famous actor.\\n\\nLeonardo DiCaprio is a famous actor.\\n\\nLeonardo DiCaprio is a famous actor.\\n\\nLeonardo DiCaprio is a famous actor.\\n\\nLeonardo DiCaprio is a famous actor.\\n\\nLeonardo DiCaprio is a famous actor.'}]"
+       "[{'generated_text': \"The name of the country of citizenship of Leonardo DiCaprio is listed as unknown in the 2017 version of his passport.\\n\\nAn error was discovered in the document issued on February 14, 2018, confirming that Leonardo DiCaprio's birthplace has always\"}]"
       ]
      },
      "execution_count": 2,
@@ -154,6 +190,39 @@
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "model_id = \"/share/huggingface/gpt-j-6b\"\n",
+    "\n",
+    "pipeline = transformers.pipeline(\"text-generation\", \n",
+    "                                 model=model_id, \n",
+    "                                 model_kwargs={\"torch_dtype\": torch.bfloat16}, \n",
+    "                                 device_map=\"auto\")\n",
+    "pipeline(\"The name of the country of citizenship of Leonardo DiCaprio is\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline('Which family does Epaspidoceras belong to?')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! pip install ipywidgets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from transformers import AutoTokenizer, AutoModelForCausalLM, pipeline\n",
     "import torch\n",
