update generate dataset

--- a/dataset/KnowEdit-ms/llm_gen_dataset.ipynb
+++ b/dataset/KnowEdit-ms/llm_gen_dataset.ipynb
@@ -1,54 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "metadata": {
-    "vscode": {
-     "languageId": "raw"
-    }
-   },
-   "source": [
-    "from zhipuai import ZhipuAI\n",
-    "client = ZhipuAI(api_key=\"1239bfa4ba1cc7135d4476e3ad30af96.JjzOdCR7qNwFSZk7\") # 填写您自己的APIKey\n",
-    "response = client.chat.completions.create(\n",
-    "    model=\"glm-4\",  # 填写需要调用的模型名称\n",
-    "    messages=[\n",
-    "        {\"role\": \"user\", \"content\": \"作为一名营销专家，请为智谱开放平台创作一个吸引人的slogan\"},\n",
-    "        {\"role\": \"assistant\", \"content\": \"当然，为了创作一个吸引人的slogan，请告诉我一些关于您产品的信息\"},\n",
-    "        {\"role\": \"user\", \"content\": \"智谱AI开放平台\"},\n",
-    "        {\"role\": \"assistant\", \"content\": \"智启未来，谱绘无限一智谱AI，让创新触手可及!\"},\n",
-    "        {\"role\": \"user\", \"content\": \"创造一个更精准、吸引人的slogan\"}\n",
-    "    ],\n",
-    ")\n",
-    "print(response.choices[0].message)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "vscode": {
-     "languageId": "raw"
-    }
-   },
-   "source": [
-    "response = client.chat.completions.create(\n",
-    "    model=\"glm-4\",  # 填写需要调用的模型名称\n",
-    "    messages=[\n",
-    "        {\"role\": \"system\", \"content\": \"你是一个乐于解答各种问题的助手，你的任务是为用户提供专业、准确、有见地的建议。\"},\n",
-    "        {\"role\": \"user\", \"content\": \"我对太阳系的行星非常感兴趣，特别是土星。请提供关于土星的基本信息，包括其大小、组成、环系统和任何独特的天文现象。\"},\n",
-    "    ],\n",
-    ")\n",
-    "print(response.choices[0].message)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 20\n",
+    "# TODO:暂未考虑主体同义替换\n",
+    "n = 10\n",
     "system_prompt = f\"\"\"You are an expert in sentence rewriting. Your task is to perform a synonymous rewriting of the input sentence and output {n} rewritten sentences.\n",
     "\n",
     "Requirements:\n",
@@ -78,16 +37,19 @@
     "with open(data_path, 'r') as f:\n",
     "    data_list = json.load(f)\n",
     "\n",
-    "for data in data_list[:1]:\n",
-    "    user_prompt = data['prompt']\n",
-    "    response = client.chat.completions.create(\n",
-    "        model=\"glm-4\",\n",
-    "        messages=[\n",
-    "            {\"role\": \"system\", \"content\": system_prompt},\n",
-    "            {\"role\": \"user\", \"content\": user_prompt},\n",
-    "        ],\n",
-    "    )\n",
-    "    print(response.choices[0].message.content)"
+    "with open('ZsRE-test-all-generate-10.json', 'w') as f:\n",
+    "    for data in data_list[:2]:\n",
+    "        user_prompt = data['prompt']\n",
+    "        response = client.chat.completions.create(\n",
+    "            model=\"glm-4\",\n",
+    "            messages=[\n",
+    "                {\"role\": \"system\", \"content\": system_prompt},\n",
+    "                {\"role\": \"user\", \"content\": user_prompt},\n",
+    "            ],\n",
+    "        )\n",
+    "        data['generate_prompt'] = response.choices[0].message.content.split('\\n')\n",
+    "        f.write(json.dumps(data, ensure_ascii=False) + '\\n')\n",
+    "        f.flush()"
    ]
   },
   {
@@ -132,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,27 +131,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'generated_text': \"The name of the country of citizenship of Leonardo DiCaprio is listed as unknown in the 2017 version of his passport.\\n\\nAn error was discovered in the document issued on February 14, 2018, confirming that Leonardo DiCaprio's birthplace has always\"}]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_id = \"/share/huggingface/gpt-j-6b\"\n",
     "\n",
@@ -257,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
