--- a/dataset/KnowEdit-ms/pre_edit.ipynb
+++ b/dataset/KnowEdit-ms/pre_edit.ipynb
@@ -17,8 +17,8 @@
     "from easyeditor.models.lora.lora_hparams import LoRAHyperParams\n",
     "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
     "import torch\n",
-    "import os\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = '1'\n"
+    "# import os\n",
+    "# os.environ['CUDA_VISIBLE_DEVICES'] = '1'\n"
    ]
   },
   {
