add dataset test

--- a/dataset/KnowEdit-ms/llm_gen_dataset.ipynb
+++ b/dataset/KnowEdit-ms/llm_gen_dataset.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,8 +37,8 @@
     "with open(data_path, 'r') as f:\n",
     "    data_list = json.load(f)\n",
     "\n",
-    "with open('ZsRE-test-all-generate-10.json', 'w') as f:\n",
-    "    for data in data_list[:2]:\n",
+    "with open('ZsRE-test-all-generate-10.json', 'a') as f:\n",
+    "    for data in data_list[1185:]:\n",
     "        user_prompt = data['prompt']\n",
     "        response = client.chat.completions.create(\n",
     "            model=\"glm-4\",\n",
@@ -54,16 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "user_prompt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,16 +62,19 @@
     "with open(data_path, 'r') as f:\n",
     "    data_list = json.load(f)\n",
     "\n",
-    "for data in data_list[:1]:\n",
-    "    user_prompt = data['prompt']\n",
-    "    response = client.chat.completions.create(\n",
-    "        model=\"glm-4\",\n",
-    "        messages=[\n",
-    "            {\"role\": \"system\", \"content\": system_prompt},\n",
-    "            {\"role\": \"user\", \"content\": user_prompt},\n",
-    "        ],\n",
-    "    )\n",
-    "    print(response.choices[0].message.content)"
+    "with open('wiki_counterfact_test_cf-generate-10.json', 'a') as f:\n",
+    "    for data in data_list[601:]:\n",
+    "        user_prompt = data['prompt']\n",
+    "        response = client.chat.completions.create(\n",
+    "            model=\"glm-4\",\n",
+    "            messages=[\n",
+    "                {\"role\": \"system\", \"content\": system_prompt},\n",
+    "                {\"role\": \"user\", \"content\": user_prompt},\n",
+    "            ],\n",
+    "        )\n",
+    "        data['generate_prompt'] = response.choices[0].message.content.split('\\n')\n",
+    "        f.write(json.dumps(data, ensure_ascii=False) + '\\n')\n",
+    "        f.flush()"
    ]
   },
   {
@@ -201,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
