add test dataset

--- a/dataset/KnowEdit-ms/pre_edit/pre_edit.ipynb
+++ b/dataset/KnowEdit-ms/pre_edit/pre_edit.ipynb
@@ -2,6 +2,66 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gpt-j-6b_zsre_v0.0\n",
+      "0.2794875314283459\n",
+      "Meta-Llama-3-8B-Instruct_zsre_v0.0\n",
+      "0.3095652500629439\n",
+      "gpt-j-6b_zsre_3\n",
+      "0.2774072498515234\n",
+      "Meta-Llama-3-8B-Instruct_zsre_3\n",
+      "0.3168733009240309\n",
+      "gpt-j-6b_zsre_1\n",
+      "0.29041921866672027\n",
+      "Meta-Llama-3-8B-Instruct_zsre_1\n",
+      "0.31402841969713596\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "\n",
+    "path_list = os.listdir('./')\n",
+    "for path in path_list:\n",
+    "    if path.endswith('.json'):\n",
+    "        with open(path, 'r') as f:\n",
+    "            data_list = json.load(f)\n",
+    "\n",
+    "        rewrite_acc_list = []\n",
+    "        for data in data_list:\n",
+    "            rewrite_acc_list.extend(data['pre']['rewrite_acc'])\n",
+    "        print(path.replace('.json', ''))\n",
+    "        print(sum(rewrite_acc_list)/len(rewrite_acc_list))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "rewrite acc有一点点提升,无显著提升,rewrite acc是怎么计算的?\n",
+    "gpt-j-6b_zsre_v0.0\n",
+    "0.2794875314283459\n",
+    "Meta-Llama-3-8B-Instruct_zsre_v0.0\n",
+    "0.3095652500629439\n",
+    "gpt-j-6b_zsre_3\n",
+    "0.2774072498515234\n",
+    "Meta-Llama-3-8B-Instruct_zsre_3\n",
+    "0.3168733009240309\n",
+    "gpt-j-6b_zsre_1\n",
+    "0.29041921866672027\n",
+    "Meta-Llama-3-8B-Instruct_zsre_1\n",
+    "0.31402841969713596"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -270,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
