--- a/dataset/KnowEdit-ms/test-answer.ipynb
+++ b/dataset/KnowEdit-ms/test-answer.ipynb
@@ -1,6 +1,374 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "观察这100条数据的答案"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import pandas as pd\n",
+    "data_path = './benchmark_wiki_counterfact_test_cf.json'\n",
+    "# data_path = './benchmark_ZsRE_ZsRE-test-all.json'\n",
+    "with open(data_path, 'r') as f:\n",
+    "    data_list = json.load(f)\n",
+    "\n",
+    "model_name = 'Meta-Llama-3-8B-Instruct'\n",
+    "# model_name = 'gpt-j-6b'\n",
+    "with open(f'answer-counterfact-{model_name}.json', 'r') as f:\n",
+    "    answer_list = f.readlines()\n",
+    "\n",
+    "answer_compare_dict = {\n",
+    "    'prompt': {},\n",
+    "    'ground_truth': {},\n",
+    "    'answer1': {},\n",
+    "    'answer2': {},\n",
+    "    'answer3': {},\n",
+    "}\n",
+    "for i in range(100):\n",
+    "    answer_compare_dict['prompt'][i] = data_list[i]['prompt']\n",
+    "    answer_compare_dict['ground_truth'][i]= data_list[i]['ground_truth']\n",
+    "    answer_dict = json.loads(answer_list[i])\n",
+    "    answer_compare_dict['answer1'][i] = answer_dict['answer1']\n",
+    "    answer_compare_dict['answer2'][i] = answer_dict['answer2']\n",
+    "    answer_compare_dict['answer3'][i] = answer_dict['answer3']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>ground_truth</th>\n",
+       "      <th>answer1</th>\n",
+       "      <th>answer2</th>\n",
+       "      <th>answer3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>The name of the country of citizenship of Leon...</td>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>United States.\\nThe name of the country of ci...</td>\n",
+       "      <td>United States\\nQ:What is the native language</td>\n",
+       "      <td>United States\\nQ:What is the name of</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The name of the country which Academy Award fo...</td>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>the United States of America. The Academy Awa...</td>\n",
+       "      <td>United States\\nQ:What is the name of</td>\n",
+       "      <td>United States\\nQ:What is the name of</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>The name of the spouse of Ron DeSantis is</td>\n",
+       "      <td>Casey DeSantis</td>\n",
+       "      <td>Casey DeSantis. She is a former television</td>\n",
+       "      <td>Jenna Dempsay\\nQ:What is</td>\n",
+       "      <td>Jenna Dempsay\\nQ:What is</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>The name of the child of Kanye West is</td>\n",
+       "      <td>North West</td>\n",
+       "      <td>North West. She was born on June 15</td>\n",
+       "      <td>North West\\nQ:What is the name of</td>\n",
+       "      <td>North West\\nQ:What is the name of</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>The names of the siblings of Janice Dickinson are</td>\n",
+       "      <td>Debbie Dickinson</td>\n",
+       "      <td>not publicly known. However, it is known that</td>\n",
+       "      <td>Debra, Pam, and Christine\\nQ:</td>\n",
+       "      <td>Debra, Patti, and Terry\\nQ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>The gender of Rowan Atkinson is</td>\n",
+       "      <td>male</td>\n",
+       "      <td>male.\\nRowan Atkinson is a British actor</td>\n",
+       "      <td>Male\\nQ:What is the birth name of</td>\n",
+       "      <td>Male\\nQ:What is the birthplace of</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Big Mouth is followed by</td>\n",
+       "      <td>The Golden Spoon</td>\n",
+       "      <td>a series of increasingly absurd and surreal e...</td>\n",
+       "      <td>Big Mouth: The Greatest Hits\\nQ:What</td>\n",
+       "      <td>Big Mouth: The Complete First Season\\nQ:</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>The name of the anthem of Philippines is</td>\n",
+       "      <td>Lupang Hinirang</td>\n",
+       "      <td>\"Lupang Hinirang\" which is</td>\n",
+       "      <td>Lupang Hinirang\\nQ:What is</td>\n",
+       "      <td>Lupang Hinirang\\nQ:What is</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>The name of the country of citizenship of Jerr...</td>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>United States.\\nJerrod Carmichael is an American</td>\n",
+       "      <td>United States\\nQ:What is the native language</td>\n",
+       "      <td>United States\\nQ:What is the name of</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>The name of the composer of Vikram is</td>\n",
+       "      <td>Anirudh Ravichander</td>\n",
+       "      <td>not known. The music is composed by a team</td>\n",
+       "      <td>Rahman\\nQ:What is the name</td>\n",
+       "      <td>Rahman\\nQ:What is the name</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>The place of burial of Princess Alice of Batte...</td>\n",
+       "      <td>St George's Chapel, Windsor</td>\n",
+       "      <td>the Imperial Crypt in Vienna, Austria. She was</td>\n",
+       "      <td>Imperial Mausoleum, Jerusalem\\nQ</td>\n",
+       "      <td>St. George's Chapel, Windsor Castle\\nQ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>The place of death of Julius Hoffman is</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>not known. He died on December 6,</td>\n",
+       "      <td>Chicago\\nQ:What is the birth name of</td>\n",
+       "      <td>Chicago\\nQ:What is the birthplace of</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>The name of the mother of Kanye West is</td>\n",
+       "      <td>Donda West</td>\n",
+       "      <td>Donda C. West. She was a professor</td>\n",
+       "      <td>Dr. Donda West\\nQ:What is</td>\n",
+       "      <td>Dr. Donda C. West\\nQ:</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Soviet Union follows</td>\n",
+       "      <td>Russian Soviet Federative Socialist Republic</td>\n",
+       "      <td>the same pattern as the United States, with a</td>\n",
+       "      <td>Russia\\nQ:What is the capital of France</td>\n",
+       "      <td>Russia\\nQ:What is the birthplace of</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>The names of the siblings of Prince Harry, Duk...</td>\n",
+       "      <td>William, Prince of Wales</td>\n",
+       "      <td>:\\n1. Prince William, Duke of Cambridge (</td>\n",
+       "      <td>Princess Beatrice, Princess Eugenie, Prince</td>\n",
+       "      <td>William, Kate, and George\\nQ:What</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>The gender of Gloria Vanderbilt is</td>\n",
+       "      <td>female</td>\n",
+       "      <td>female.\\nGloria Vanderbilt is a famous American</td>\n",
+       "      <td>Female\\nQ:What is the native language of</td>\n",
+       "      <td>Female\\nQ:What is the birthplace of</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>The name of the mother of Richard Nixon is</td>\n",
+       "      <td>Hannah Milhous Nixon</td>\n",
+       "      <td>Hannah Milhous. She was born in</td>\n",
+       "      <td>Franklin D. Roosevelt\\nQ:What is</td>\n",
+       "      <td>Franklin D. Roosevelt\\nQ:What is</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>The place of birth of Jenna Ortega is</td>\n",
+       "      <td>Coachella Valley</td>\n",
+       "      <td>Coachella Valley, California, United States. She</td>\n",
+       "      <td>Los Angeles, California, USA\\nQ:What</td>\n",
+       "      <td>Los Angeles, California, United States\\nQ:</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>The place of death of Billy Kametz is</td>\n",
+       "      <td>Hershey</td>\n",
+       "      <td>not known. He was an American voice actor,</td>\n",
+       "      <td>Los Angeles, California, USA\\nQ:What</td>\n",
+       "      <td>Los Angeles\\nQ:What is the birthdate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>The name of the country which 2021 Myanmar cou...</td>\n",
+       "      <td>Myanmar</td>\n",
+       "      <td>Myanmar. The country was previously known as ...</td>\n",
+       "      <td>Myanmar\\nQ:What is the name of</td>\n",
+       "      <td>Myanmar\\nQ:What is the birthplace</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               prompt  \\\n",
+       "0   The name of the country of citizenship of Leon...   \n",
+       "1   The name of the country which Academy Award fo...   \n",
+       "2           The name of the spouse of Ron DeSantis is   \n",
+       "3              The name of the child of Kanye West is   \n",
+       "4   The names of the siblings of Janice Dickinson are   \n",
+       "5                     The gender of Rowan Atkinson is   \n",
+       "6                            Big Mouth is followed by   \n",
+       "7            The name of the anthem of Philippines is   \n",
+       "8   The name of the country of citizenship of Jerr...   \n",
+       "9               The name of the composer of Vikram is   \n",
+       "10  The place of burial of Princess Alice of Batte...   \n",
+       "11            The place of death of Julius Hoffman is   \n",
+       "12            The name of the mother of Kanye West is   \n",
+       "13                               Soviet Union follows   \n",
+       "14  The names of the siblings of Prince Harry, Duk...   \n",
+       "15                 The gender of Gloria Vanderbilt is   \n",
+       "16         The name of the mother of Richard Nixon is   \n",
+       "17              The place of birth of Jenna Ortega is   \n",
+       "18              The place of death of Billy Kametz is   \n",
+       "19  The name of the country which 2021 Myanmar cou...   \n",
+       "\n",
+       "                                    ground_truth  \\\n",
+       "0                       United States of America   \n",
+       "1                       United States of America   \n",
+       "2                                 Casey DeSantis   \n",
+       "3                                     North West   \n",
+       "4                               Debbie Dickinson   \n",
+       "5                                           male   \n",
+       "6                               The Golden Spoon   \n",
+       "7                                Lupang Hinirang   \n",
+       "8                       United States of America   \n",
+       "9                            Anirudh Ravichander   \n",
+       "10                   St George's Chapel, Windsor   \n",
+       "11                                       Chicago   \n",
+       "12                                    Donda West   \n",
+       "13  Russian Soviet Federative Socialist Republic   \n",
+       "14                      William, Prince of Wales   \n",
+       "15                                        female   \n",
+       "16                          Hannah Milhous Nixon   \n",
+       "17                              Coachella Valley   \n",
+       "18                                       Hershey   \n",
+       "19                                       Myanmar   \n",
+       "\n",
+       "                                              answer1  \\\n",
+       "0    United States.\\nThe name of the country of ci...   \n",
+       "1    the United States of America. The Academy Awa...   \n",
+       "2          Casey DeSantis. She is a former television   \n",
+       "3                 North West. She was born on June 15   \n",
+       "4       not publicly known. However, it is known that   \n",
+       "5            male.\\nRowan Atkinson is a British actor   \n",
+       "6    a series of increasingly absurd and surreal e...   \n",
+       "7                          \"Lupang Hinirang\" which is   \n",
+       "8    United States.\\nJerrod Carmichael is an American   \n",
+       "9          not known. The music is composed by a team   \n",
+       "10     the Imperial Crypt in Vienna, Austria. She was   \n",
+       "11                  not known. He died on December 6,   \n",
+       "12                 Donda C. West. She was a professor   \n",
+       "13      the same pattern as the United States, with a   \n",
+       "14          :\\n1. Prince William, Duke of Cambridge (   \n",
+       "15    female.\\nGloria Vanderbilt is a famous American   \n",
+       "16                   Hannah Milhous. She was born in    \n",
+       "17   Coachella Valley, California, United States. She   \n",
+       "18         not known. He was an American voice actor,   \n",
+       "19   Myanmar. The country was previously known as ...   \n",
+       "\n",
+       "                                         answer2  \\\n",
+       "0   United States\\nQ:What is the native language   \n",
+       "1           United States\\nQ:What is the name of   \n",
+       "2                       Jenna Dempsay\\nQ:What is   \n",
+       "3              North West\\nQ:What is the name of   \n",
+       "4                  Debra, Pam, and Christine\\nQ:   \n",
+       "5              Male\\nQ:What is the birth name of   \n",
+       "6           Big Mouth: The Greatest Hits\\nQ:What   \n",
+       "7                     Lupang Hinirang\\nQ:What is   \n",
+       "8   United States\\nQ:What is the native language   \n",
+       "9                     Rahman\\nQ:What is the name   \n",
+       "10              Imperial Mausoleum, Jerusalem\\nQ   \n",
+       "11          Chicago\\nQ:What is the birth name of   \n",
+       "12                     Dr. Donda West\\nQ:What is   \n",
+       "13       Russia\\nQ:What is the capital of France   \n",
+       "14   Princess Beatrice, Princess Eugenie, Prince   \n",
+       "15      Female\\nQ:What is the native language of   \n",
+       "16              Franklin D. Roosevelt\\nQ:What is   \n",
+       "17          Los Angeles, California, USA\\nQ:What   \n",
+       "18          Los Angeles, California, USA\\nQ:What   \n",
+       "19                Myanmar\\nQ:What is the name of   \n",
+       "\n",
+       "                                       answer3  \n",
+       "0         United States\\nQ:What is the name of  \n",
+       "1         United States\\nQ:What is the name of  \n",
+       "2                     Jenna Dempsay\\nQ:What is  \n",
+       "3            North West\\nQ:What is the name of  \n",
+       "4                   Debra, Patti, and Terry\\nQ  \n",
+       "5            Male\\nQ:What is the birthplace of  \n",
+       "6     Big Mouth: The Complete First Season\\nQ:  \n",
+       "7                   Lupang Hinirang\\nQ:What is  \n",
+       "8         United States\\nQ:What is the name of  \n",
+       "9                   Rahman\\nQ:What is the name  \n",
+       "10      St. George's Chapel, Windsor Castle\\nQ  \n",
+       "11        Chicago\\nQ:What is the birthplace of  \n",
+       "12                       Dr. Donda C. West\\nQ:  \n",
+       "13         Russia\\nQ:What is the birthplace of  \n",
+       "14           William, Kate, and George\\nQ:What  \n",
+       "15         Female\\nQ:What is the birthplace of  \n",
+       "16            Franklin D. Roosevelt\\nQ:What is  \n",
+       "17  Los Angeles, California, United States\\nQ:  \n",
+       "18        Los Angeles\\nQ:What is the birthdate  \n",
+       "19           Myanmar\\nQ:What is the birthplace  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "answer_pd = pd.DataFrame(answer_compare_dict)\n",
+    "answer_pd[:20]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "生成100条数据的答案观察"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -448,6 +816,7 @@
     }
    ],
    "source": [
+    "# # TODO:考虑使用检索增强技术,匹配到语义和句式更相近的句子\n",
     "with open(f'answer-zsre-{model_name}.json', 'a') as f:\n",
     "    for data in data_list[:100]:\n",
     "        prompt1 = data['prompt']\n",
@@ -484,7 +853,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
