--- a/hparams/LoRA/test.ipynb
+++ b/hparams/LoRA/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
        " 'model_parallel': False}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for bs in [8,16,32,64]:\n",
+    "    with open(f'./test/gpt-j-6b-bs-{bs}.yaml', 'w') as f:\n",
+    "        hparams['batch_size'] = bs\n",
+    "        yaml.dump(hparams, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -85,12 +97,13 @@
     "        with open(f'./test/gpt-j-6b-{target_modules}-{layers[0]}-{layers[-1]}.yaml', 'w') as f:\n",
     "            hparams['layers'] = layers\n",
     "            hparams['target_modules'] = target_modules_dict[target_modules]\n",
+    "            # hparams['bf16'] = True\n",
     "            yaml.dump(hparams, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +133,7 @@
        " 'weight_decay': 0}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
