--- a/dataset/KnowEdit-ms/llm_gen_dataset.ipynb
+++ b/dataset/KnowEdit-ms/llm_gen_dataset.ipynb
@@ -2,6 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import AutoTokenizer, AutoModelForCausalLM, pipeline\n",
+    "import torch\n",
+    "import os\n",
+    "os.environ['CUDA_VISIBLE_DEVICES'] = '0'\n",
+    "import json\n",
+    "\n",
+    "model_path = '/share/huggingface/Meta-Llama-3-8B-Instruct'\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_path)\n",
+    "model = AutoModelForCausalLM.from_pretrained(model_path, torch_dtype=torch.bfloat16)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "glm生成辅助数据"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -84,6 +108,13 @@
    "outputs": [],
    "source": [
     "user_prompt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "测试llm输出稳定"
    ]
   },
   {
@@ -195,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
